--- a/5_Virtual_Screening_Filter.ipynb
+++ b/5_Virtual_Screening_Filter.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "5. Virtual Screening Filter.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3127,7 +3128,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6t1vUp0VWp73",
-        "outputId": "62394cfb-c41c-4892-b20e-a65376825bdb"
+        "outputId": "5020d1a7-8f39-43f5-f70b-1b1f822a830a"
       },
       "execution_count": null,
       "outputs": [
@@ -3138,7 +3139,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting rdkit-pypi\n",
             "  Downloading rdkit_pypi-2022.3.5-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (36.8 MB)\n",
-            "\u001b[K     |████████████████████████████████| 36.8 MB 28 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 36.8 MB 1.3 MB/s \n",
             "\u001b[?25hCollecting mols2grid\n",
             "  Downloading mols2grid-0.2.4-py3-none-any.whl (35 kB)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (4.64.0)\n",
@@ -3147,8 +3148,8 @@
             "Requirement already satisfied: pandas in /usr/local/lib/python3.7/dist-packages (from mols2grid) (1.3.5)\n",
             "Requirement already satisfied: jinja2>=2.11.0 in /usr/local/lib/python3.7/dist-packages (from mols2grid) (2.11.3)\n",
             "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.7/dist-packages (from jinja2>=2.11.0->mols2grid) (2.0.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas->mols2grid) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2017.3 in /usr/local/lib/python3.7/dist-packages (from pandas->mols2grid) (2022.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas->mols2grid) (2.8.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.7.3->pandas->mols2grid) (1.15.0)\n",
             "Installing collected packages: rdkit-pypi, mols2grid\n",
             "Successfully installed mols2grid-0.2.4 rdkit-pypi-2022.3.5\n"
@@ -3163,10 +3164,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "B2a61vrK9TRP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B2a61vrK9TRP",
+        "outputId": "1673f987-2684-4379-f5f8-84c6e2e72e33"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3183,7 +3196,7 @@
         "from rdkit.Chem import Descriptors, Draw, PandasTools\n",
         "from rdkit.Chem.Draw import IPythonConsole \n",
         "import os\n",
-        "os.chdir(\"/content/drive/MyDrive/MedAI/1. Chemoinformatics/Data\")"
+        "os.chdir(\"/content/drive/MyDrive/MedAI/1. Chemoinformatics/Data/\")"
       ],
       "metadata": {
         "id": "sVVmN1XeTCjU"
@@ -3215,6 +3228,55 @@
       ],
       "metadata": {
         "id": "S1CqAIyEXcI4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TPSA < 140"
+      ],
+      "metadata": {
+        "id": "_jfqtFfUK5Wt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Medicinal Chemistry Rules**\n",
+        "\n",
+        "1. [QED](https://www.nature.com/articles/nchem.1243)\n",
+        "- A measure of drug-likeness based on the concept of desirability. QED is calculated by integrating the outputs of the desirability functions based on eight drug-likeness related properties, including MW, log P, NHBA, NHBD, PSA, Nrotb, the number of aromatic rings (NAr), and the number of alerts for undesirable functional groups. \n",
+        "- Results interpretation: The mean QED is 0.67 for the attractive compounds, 0.49 for the unattractive compounds and 0.34 for the unattractive compounds considered too complex.\n",
+        "\n",
+        "2. [SAscore](https://jcheminf.biomedcentral.com/articles/10.1186/1758-2946-1-8)\n",
+        "- Synthetic accessibility score is designed to estimate ease of synthesis of drug-like molecules, based on a combination of fragment contributions and a complexity penalty. The score is between 1 (easy to make) and 10 (very difficult to make). The synthetic accessibility score (SAscore) is calculated as a combination of two components: \\text { SAscore }=\\text { fragmentScore - complexityPenalty } SAscore = fragmentScore - complexityPenalty \n",
+        "- Results interpretation: high SAscore: ≥ 6, difficult to synthesize; low SAscore: < 6, easy to synthesize\n",
+        "\n",
+        "3. [Fsp3](https://pubs.acs.org/doi/10.1021/jm901241e)\n",
+        "- Fsp3, the number of sp3 hybridized carbons/total carbon count, is used to determine the carbon saturation of molecules and characterize the complexity of the spatial structure of molecules. It has been demonstrated that the increased saturation measured by Fsp3 and the number of chiral centers in the molecule increase the clinical success rate, which might be related to the increased solubility, or the fact that the enhanced 3D features allow small molecules to occupy more target space.\n",
+        "- Results interpretation: Fsp3 ≥ 0.42 is considered a suitable value.\n",
+        "\n",
+        "4. [Lipinski Rule](https://www.sciencedirect.com/science/article/abs/pii/S0169409X00001290?via%3Dihub)\n",
+        "- Content: MW≤500; logP≤5; Hacc≤10; Hdon≤5\n",
+        "- Results interpretation: If two properties are out of range, a poor absorption or permeability is possible, one is acceptable.\n",
+        "\n",
+        "5. [Pfizer Rule](https://www.sciencedirect.com/science/article/abs/pii/S0960894X08008500?via%3Dihub)\n",
+        "- Content: logP > 3; TPSA < 75\n",
+        "- Results interpretation: Compounds with a high log P (>3) and low TPSA (< 75) are likely to be toxic.\n",
+        "\n",
+        "6. [GSK Rule](https://pubs.acs.org/doi/10.1021/jm701122q)\n",
+        "- Content: MW ≤ 400; logP ≤ 4\n",
+        "- Results interpretation: Compounds satisfying the GSK rule may have a more favorable ADMET profile.\n",
+        "\n",
+        "7. [Golden Triangle](https://www.sciencedirect.com/science/article/abs/pii/S0960894X09011858?via%3Dihub)\n",
+        "- Content: 200 ≤MW ≤50; -2 ≤ logD ≤5\n",
+        "- Results interpretation: Compounds satisfying the GoldenTriangle rule may have a more favourable ADMET profile.\n",
+        "\n",
+        "8. [PAINS](https://pubs.acs.org/doi/10.1021/jm901137j)\n",
+        "- Pan Assay Interference Compounds (PAINS) is one of the most famous frequent hitters filters, which comprises 480 substructures derived from the analysis of FHs determined by six target-based HTS assay. By application of these filters, it is easier to screen false positive hits and to flag suspicious compounds in screening databases. One of the most authoritative medicine magazines Journal of Medicinal Chemistry even requires authors to provide the screening results with the PAINS alerts of active compounds when submitting manuscripts.\n"
+      ],
+      "metadata": {
+        "id": "5iFnVAnwBbul"
       }
     },
     {
@@ -3277,7 +3339,7 @@
           "height": 923
         },
         "id": "BIKzn-K4TSX9",
-        "outputId": "db115cfa-d612-4a8e-ce28-ed6a1e073226"
+        "outputId": "9e280d01-050a-47fe-efab-e8f6cc6c5d3d"
       },
       "execution_count": null,
       "outputs": [
@@ -3299,7 +3361,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ff0b5ae7-5f46-44f9-bdc6-849e5c3e00b2\">\n",
+              "  <div id=\"df-827b74df-7444-4055-860d-2ffde475bdb1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -3352,7 +3414,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ff0b5ae7-5f46-44f9-bdc6-849e5c3e00b2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-827b74df-7444-4055-860d-2ffde475bdb1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3403,12 +3465,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ff0b5ae7-5f46-44f9-bdc6-849e5c3e00b2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-827b74df-7444-4055-860d-2ffde475bdb1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ff0b5ae7-5f46-44f9-bdc6-849e5c3e00b2');\n",
+              "          const element = document.querySelector('#df-827b74df-7444-4055-860d-2ffde475bdb1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3431,7 +3493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 7
         }
       ]
     },
@@ -4089,6 +4151,17 @@
       ],
       "metadata": {
         "id": "nzIqEZ5UTiIM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Descriptors.TPSA(m)"
+      ],
+      "metadata": {
+        "id": "o5EJBdKmGK8U"
       },
       "execution_count": null,
       "outputs": []
