--- a/test.ipynb
+++ b/test.ipynb
@@ -144,11 +144,11 @@
      "text": [
       "/Users/johnwilliam/opt/anaconda3/envs/Long_ML/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "100%|██████████| 4/4 [00:00<00:00, 1701.54it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 1219.10it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 3150.06it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 679.21it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 7300.79it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 1800.13it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 3220.20it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 4973.97it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 651.47it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 6958.61it/s]\n"
      ]
     },
     {
@@ -291,6 +291,15 @@
    "metadata": {},
    "source": [
     "# **1. Ro5**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Content: MW≤500; logP≤5; Hacc≤10; Hdon≤5; TPSA≤140\n",
+    "- Results interpretation: If two properties are out of range, a poor absorption or permeability is possible, one is acceptable.\n",
+    "- Empirical decision: < 2 violations：excellent (green)；≥2 violations: poor (red)"
    ]
   },
   {
@@ -508,7 +517,7 @@
     "    Returns\n",
     "    -------\n",
     "    [numpy.float64, bool]\n",
-    "        [QED, QED_fulfilled]\n",
+    "        [QED, QED_excellent]\n",
     "        QED for input molecule and 'attractive'-ness.\n",
     "    \"\"\"\n",
     "    # RDKit molecule from SMILES\n",
@@ -516,13 +525,9 @@
     "    # Calculate QED of input molecule\n",
     "    qed = Chem.QED.qed(molecule)\n",
     "    # Check if QED conditions fulfilled\n",
-    "    conditions = qed > 0.67\n",
-    "    qed_fulfilled = conditions == 1\n",
+    "    qed_excellent = qed > 0.67\n",
     "    # Return True if condition is fulfilled\n",
-    "    # return pd.Series(\n",
-    "    #     [molecular_weight, n_hba, n_hbd, logp, tpsa, ro5_fulfilled],\n",
-    "    #     index=[\"molecular_weight\", \"n_hba\", \"n_hbd\", \"logp\", \"tpsa\", \"ro5_fulfilled\"],\n",
-    "    return [qed, qed_fulfilled]"
+    "    return [qed, qed_excellent]"
    ]
   },
   {
@@ -559,7 +564,7 @@
     "    Returns\n",
     "    -------\n",
     "    [numpy.float64, bool]\n",
-    "        [SAscore, SAscore_synthesize]\n",
+    "        [SAscore, SAscore_excellent]\n",
     "        SAscore for input molecule and synthetic accessibility.\n",
     "    \"\"\"\n",
     "    # RDKit molecule from SMILES\n",
@@ -567,22 +572,83 @@
     "    # Calculate SAscore of input molecule\n",
     "    SAscore = sascorer.calculateScore(molecule)\n",
     "    # Check if SAscore condition is fulfilled\n",
-    "    conditions = SAscore <= 6\n",
-    "    SAscore_synthesize = conditions == 1\n",
+    "    SAscore_excellent = SAscore <= 6\n",
     "    # Return True if condition is fulfilled\n",
-    "    return [SAscore, SAscore_synthesize]"
+    "    return [SAscore, SAscore_excellent]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculate all"
+    "# **7. Fsp3 - Fraction sp3**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Fsp3, the number of sp3 hybridized carbons/total carbon count, is used to determine the carbon saturation of molecules and characterize the complexity of the spatial structure of molecules. It has been demonstrated that the increased saturation measured by Fsp3 and the number of chiral centers in the molecule increase the clinical success rate, which might be related to the increased solubility, or the fact that the enhanced 3D features allow small molecules to occupy more target space.\n",
+    "- Results interpretation: Fsp3 ≥ 0.42 is considered a suitable value.\n",
+    "- Empirical decision: ≥ 0.42：excellent (green); ＜0.42: poor (red)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_fsp3(smiles):\n",
+    "    \"\"\"\n",
+    "    Calculate Fsp3 and test if input molecule (SMILES) has suitable Fsp3 value.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    smiles : str\n",
+    "        SMILES for a molecule.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    [float, bool]\n",
+    "        [fsp3, fsp3_excellent]\n",
+    "        Fsp3 for input molecule and its suitability.\n",
+    "    \"\"\"\n",
+    "    # RDKit molecule from SMILES\n",
+    "    molecule = Chem.MolFromSmiles(smiles)\n",
+    "    # Calculate Fsp3 of input molecule\n",
+    "    fsp3 = Chem.Lipinski.FractionCSP3(molecule)\n",
+    "    # Check if Fsp3 condition is fulfilled\n",
+    "    fsp3_excellent = fsp3 >= 0.42\n",
+    "    # Return True if condition is fulfilled\n",
+    "    return [fsp3, fsp3_excellent]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **8. PAINS - Pan Assay Interference Compounds**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Pan Assay Interference Compounds (PAINS) is one of the most famous frequent hitters filters, which comprises 480 substructures derived from the analysis of FHs determined by six target-based HTS assay. By application of these filters, it is easier to screen false positive hits and to flag suspicious compounds in screening databases. One of the most authoritative medicine magazines Journal of Medicinal Chemistry even requires authors to provide the screening results with the PAINS alerts of active compounds when submitting manuscripts.\n",
+    "- Results interpretation: If the number of alerts is not zero, the users could check the substructures by the DETIAL button."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Calculate all**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,29 +666,32 @@
     "    pandas.Series\n",
     "        All rules.\n",
     "    \"\"\"\n",
-    "    # Calculate all fingerprints of molecule\n",
+    "    # Calculate all rules of molecule\n",
     "    ro5_rule = calculate_ro5_properties(smiles)\n",
     "    pfizer_rule = calculate_pfizer_rule(smiles)\n",
     "    gsk_rule = calculate_gsk_rule(smiles)\n",
     "    goldentriangle_rule = calculate_goldentriangle_rule(smiles)\n",
     "    qed = calculate_qed(smiles)\n",
     "    sascore = calculate_sascore(smiles)\n",
+    "    fsp3 = calculate_fsp3(smiles)\n",
     "    return pd.Series(\n",
-    "        [ro5_rule, pfizer_rule, gsk_rule, goldentriangle_rule, qed[0], qed[1], sascore[0], sascore[1]],\n",
-    "        [\"ro5_rule\", \"pfizer_rule\", \"gsk_rule\", \"goldentriangle_rule\", \"qed\", \"qed_attractive\", \"sascore\", \"sascore_synthesize\"]\n",
+    "        [ro5_rule, pfizer_rule, gsk_rule, goldentriangle_rule, qed[0], qed[1], \n",
+    "         sascore[0], sascore[1], fsp3[0], fsp3[1]],\n",
+    "        [\"ro5_rule\", \"pfizer_rule\", \"gsk_rule\", \"goldentriangle_rule\", \"qed\", \"qed_excellent\", \n",
+    "         \"sascore\", \"sascore_excellent\", \"fsp3\", \"fsp3_excellent\"]\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00,  8.83it/s]\n"
+      "100%|██████████| 4/4 [00:00<00:00,  7.81it/s]\n"
      ]
     }
    ],
@@ -633,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -670,9 +739,11 @@
        "      <th>gsk_rule</th>\n",
        "      <th>goldentriangle_rule</th>\n",
        "      <th>qed</th>\n",
-       "      <th>qed_attractive</th>\n",
+       "      <th>qed_excellent</th>\n",
        "      <th>sascore</th>\n",
-       "      <th>sascore_synthesize</th>\n",
+       "      <th>sascore_excellent</th>\n",
+       "      <th>fsp3</th>\n",
+       "      <th>fsp3_excellent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -694,6 +765,8 @@
        "      <td>False</td>\n",
        "      <td>6.877891</td>\n",
        "      <td>False</td>\n",
+       "      <td>0.790323</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -713,6 +786,8 @@
        "      <td>True</td>\n",
        "      <td>2.525961</td>\n",
        "      <td>True</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -732,6 +807,8 @@
        "      <td>False</td>\n",
        "      <td>3.693087</td>\n",
        "      <td>True</td>\n",
+       "      <td>0.450000</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -750,6 +827,8 @@
        "      <td>0.510775</td>\n",
        "      <td>False</td>\n",
        "      <td>3.461202</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.523810</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -775,14 +854,20 @@
        "2      0  12.60580    0.00     False         True     False   \n",
        "3      2   5.84650   40.46      True         True     False   \n",
        "\n",
-       "   goldentriangle_rule       qed  qed_attractive   sascore  sascore_synthesize  \n",
-       "0                False  0.147925           False  6.877891               False  \n",
-       "1                 True  0.869629            True  2.525961                True  \n",
-       "2                False  0.243513           False  3.693087                True  \n",
-       "3                False  0.510775           False  3.461202                True  "
+       "   goldentriangle_rule       qed  qed_excellent   sascore  sascore_excellent  \\\n",
+       "0                False  0.147925          False  6.877891              False   \n",
+       "1                 True  0.869629           True  2.525961               True   \n",
+       "2                False  0.243513          False  3.693087               True   \n",
+       "3                False  0.510775          False  3.461202               True   \n",
+       "\n",
+       "       fsp3  fsp3_excellent  \n",
+       "0  0.790323            True  \n",
+       "1  0.315789           False  \n",
+       "2  0.450000            True  \n",
+       "3  0.523810            True  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -822,9 +907,11 @@
        "      <th>gsk_rule</th>\n",
        "      <th>goldentriangle_rule</th>\n",
        "      <th>qed</th>\n",
-       "      <th>qed_attractive</th>\n",
+       "      <th>qed_excellent</th>\n",
        "      <th>sascore</th>\n",
-       "      <th>sascore_synthesize</th>\n",
+       "      <th>sascore_excellent</th>\n",
+       "      <th>fsp3</th>\n",
+       "      <th>fsp3_excellent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -838,6 +925,8 @@
        "      <td>False</td>\n",
        "      <td>6.877891</td>\n",
        "      <td>False</td>\n",
+       "      <td>0.790323</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -849,6 +938,8 @@
        "      <td>True</td>\n",
        "      <td>2.525961</td>\n",
        "      <td>True</td>\n",
+       "      <td>0.315789</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -860,6 +951,8 @@
        "      <td>False</td>\n",
        "      <td>3.693087</td>\n",
        "      <td>True</td>\n",
+       "      <td>0.450000</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -870,6 +963,8 @@
        "      <td>0.510775</td>\n",
        "      <td>False</td>\n",
        "      <td>3.461202</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.523810</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -883,14 +978,14 @@
        "2     False         True     False                False  0.243513   \n",
        "3      True         True     False                False  0.510775   \n",
        "\n",
-       "   qed_attractive   sascore  sascore_synthesize  \n",
-       "0           False  6.877891               False  \n",
-       "1            True  2.525961                True  \n",
-       "2           False  3.693087                True  \n",
-       "3           False  3.461202                True  "
+       "   qed_excellent   sascore  sascore_excellent      fsp3  fsp3_excellent  \n",
+       "0          False  6.877891              False  0.790323            True  \n",
+       "1           True  2.525961               True  0.315789           False  \n",
+       "2          False  3.693087               True  0.450000            True  \n",
+       "3          False  3.461202               True  0.523810            True  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
