--- a/test.ipynb
+++ b/test.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/johnwilliam/opt/anaconda3/envs/Long_ML/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import math\n",
@@ -32,6 +23,7 @@
     "import matplotlib.patches as mpatches\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import Descriptors, Draw, PandasTools\n",
+    "from rdkit.Chem.FilterCatalog import FilterCatalog, FilterCatalogParams\n",
     "from rdkit.Chem.Draw import IPythonConsole\n",
     "from tqdm.auto import tqdm\n",
     "tqdm.pandas()\n",
@@ -581,16 +573,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Pan Assay Interference Compounds (PAINS) is one of the most famous frequent hitters filters, which comprises 480 substructures derived from the analysis of FHs determined by six target-based HTS assay. By application of these filters, it is easier to screen false positive hits and to flag suspicious compounds in screening databases. One of the most authoritative medicine magazines Journal of Medicinal Chemistry even requires authors to provide the screening results with the PAINS alerts of active compounds when submitting manuscripts.\n",
-    "- Results interpretation: If the number of alerts is not zero, the users could check the substructures by the DETIAL button."
+    "- Pan Assay Interference Compounds (PAINS) is one of the most famous frequent hitters filters, which comprises 480 substructures derived from the analysis of FHs determined by six target-based HTS assay. By application of these filters, it is easier to screen false positive hits and to flag suspicious compounds in screening databases. One of the most authoritative medicine magazines Journal of Medicinal Chemistry even requires authors to provide the screening results with the PAINS alerts of active compounds when submitting manuscripts.button."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def pains_filter(list_of_smiles):\n",
+    "    \"\"\"\n",
+    "    PAINS filter for a list of SMILES.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    list_of_smiles : list of str\n",
+    "        List of SMILES for a molecule.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    [pd.DataFrame, pd.DataFrame]\n",
+    "        [matches, unmatches]\n",
+    "        Matches and unmatches for PAINS.\n",
+    "    \"\"\"\n",
+    "    # Initialize filter\n",
+    "    params = FilterCatalogParams()\n",
+    "    params.AddCatalog(FilterCatalogParams.FilterCatalogs.PAINS)\n",
+    "    catalog = FilterCatalog(params)\n",
+    "    \n",
+    "    # Initialize list\n",
+    "    matches = []\n",
+    "    unmatches = []\n",
+    "    \n",
+    "    # Check each molecule\n",
+    "    for smiles in tqdm(list_of_smiles, total=list_of_smiles.shape[0]):\n",
+    "        molecule = Chem.MolFromSmiles(smiles)\n",
+    "        entry = catalog.GetFirstMatch(molecule)  # Get the first matching PAINS\n",
+    "        if entry is not None:\n",
+    "            # store PAINS information\n",
+    "            matches.append(\n",
+    "                {\n",
+    "                    \"smiles\": smiles,\n",
+    "                    \"pains\": entry.GetDescription().capitalize(),\n",
+    "                }\n",
+    "                )\n",
+    "        else:\n",
+    "            # collect molecules without PAINS\n",
+    "            unmatches.append({\"smiles\": smiles})\n",
+    "    \n",
+    "    matches = pd.DataFrame(matches)\n",
+    "    unmatches = pd.DataFrame(unmatches) # keep molecules without PAINS\n",
+    "    \n",
+    "    # Print result\n",
+    "    print(f\"Number of compounds with PAINS: {len(matches)}\")\n",
+    "    print(f\"Number of compounds without PAINS: {len(unmatches)}\")\n",
+    "    \n",
+    "    return [matches, unmatches]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -601,13 +641,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_all(smiles, descriptors = False):\n",
     "    \"\"\"\n",
-    "    Calculate all rules.\n",
+    "    Calculate all rules WITHOUT PAINS.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -652,16 +692,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Test**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:00<00:00,  7.10it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "435b1c1aceb0434997e8b0cc2043abc8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -671,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +890,7 @@
        "3  0.523810            True  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1039,7 @@
        "3               True  0.523810            True  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,17 +1050,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd4b23b199014ca9a574fa7473ae3e3d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of compounds with PAINS: 0\n",
+      "Number of compounds without PAINS: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches, unmatches = pains_filter(molecules[\"smiles\"])\n",
+    "print(f\"Number of compounds with PAINS: {len(matches)}\")\n",
+    "print(f\"Number of compounds without PAINS: {len(unmatches)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataframe shape: (4635, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "egfr_data = pd.read_csv(\"EGFR_compounds_lipinski.csv\",\n",
+    "    index_col=0,\n",
+    ")\n",
+    "# Drop unnecessary information\n",
+    "print(\"Dataframe shape:\", egfr_data.shape)\n",
+    "egfr_data.drop(columns=[\"molecular_weight\", \"n_hbd\", \"n_hba\", \"logp\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e4b3fe737504d1391842fedd89298f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of compounds with PAINS: 408\n",
+      "Number of compounds without PAINS: 4227\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches, unmatches = pains_filter(egfr_data[\"smiles\"])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "egfr_LeadLike = egfr_data"
+   ]
   }
  ],
  "metadata": {
